<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Gaijin Keitai Keyboard</string>
    <string name="gkk_settings">GKK Settings</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
	
	<string name="display_name_english_keyboard_ime">G-Klava</string>
	<string name="display_name_russian_keyboard_ime">%s</string>
     
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    
    <string name="lang_english">English (Latin)</string>
    <string name="lang_russian">Русский</string>
    <string name="lang_german">Deutsch</string>
    <string name="lang_french">Français</string>
    <string name="lang_italian">Italiana</string>
    <string name="lang_spanish">Español</string>
    <string name="lang_portuguese">Portuguesa</string>
    <string name="lang_dutch">Nederlands</string>
    <string name="lang_danish">Dansk</string>
    <string name="lang_norwegian">Norsk</string>
    <string name="lang_swedish">Svenska</string>
    <string name="lang_finnish">Suomi</string>
    <string name="lang_greek">ελληνικά</string>
    <string name="lang_ukrainian">Український</string>
    <string name="lang_belarusian">Беларускі</string>
    <string name="lang_bulgarian">Български</string>
    <string name="lang_serbian">Српски</string>
    <string name="lang_makedonian">Македонски</string>
    <string name="lang_romanian">Română</string>
    <string name="lang_polish">Polski</string>
    <string name="lang_czech">Čeština</string>
    <string name="lang_hungarian">Magyar</string>
    <string name="lang_turkish">Türkçe</string>
    <string name="lang_hebrew">עִבְרִית</string>
    
    <color name="white_color">#fff</color>
    <color name="gray_color">#aaa</color>
</resources>
